5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/3989/executions/1592_1804.log
== TEST (2019-03-29 23:16:45) 
-- CODE:
Xa = float(input("Xa: "))
Xb = float (input("Xb"))
Ya = float(input("Ya:"))
Yb = float(input("Yb"))

dAB = math.sqrt(Xb - Xa) ** 2 + (Yb-Ya) ** 2 

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    dAB = math.sqrt(Xb - Xa) ** 2 + (Yb-Ya) ** 2 
NameError: name 'math' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 23:18:00) 
-- CODE:
Xa = float(input("Xa: "))
Xb = float (input("Xb: "))
Ya = float(input("Ya:"))
Yb = float(input("Yb: "))

from math import*
dAB = sqrt(Xb - Xa) ** 2 + (Yb-Ya) ** 2 
print(dAB)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    dAB = sqrt(Xb - Xa) ** 2 + (Yb-Ya) ** 2 
ValueError: math domain error
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 23:18:44) 
-- CODE:
Xa = float(input("Xa: "))
Xb = float (input("Xb: "))
Ya = float(input("Ya:"))
Yb = float(input("Yb: "))

from math import*
dAB = sqrt(Xb - Xa) ** 2 + (Yb-Ya) ** 2 
print(round(dAB, 3)
		

-- ERROR:
File "XXXX", line 10
    
      ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 23:18:51) 
-- CODE:
Xa = float(input("Xa: "))
Xb = float (input("Xb: "))
Ya = float(input("Ya:"))
Yb = float(input("Yb: "))

from math import*
dAB = sqrt(Xb - Xa) ** 2 + (Yb-Ya) ** 2 
print(round(dAB, 3)
-- ERROR:
File "XXXX", line 9
    
                       ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 23:19:01) 
-- CODE:
Xa = float(input("Xa: "))
Xb = float (input("Xb: "))
Ya = float(input("Ya:"))
Yb = float(input("Yb: "))

from math import*
dAB = sqrt(Xb - Xa) ** 2 + (Yb-Ya) ** 2 
print(round(dAB, 3))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    dAB = sqrt(Xb - Xa) ** 2 + (Yb-Ya) ** 2 
ValueError: math domain error
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 23:19:55) 
-- CODE:
Xa = float(input("Xa: "))
Ya = float(input("Ya:"))
Xb = float (input("Xb: "))
Yb = float(input("Yb: "))

from math import*
dAB = sqrt(Xb - Xa) ** 2 + (Yb-Ya) ** 2 
print(round(dAB, 3))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    dAB = sqrt(Xb - Xa) ** 2 + (Yb-Ya) ** 2 
ValueError: math domain error
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 23:20:25) 
-- CODE:
Xa = float(input("Xa: "))
Ya = float(input("Ya:"))
Xb = float (input("Xb: "))
Yb = float(input("Yb: "))

from math import*
dAB = sqrt ((Xb - Xa) ** 2 + (Yb-Ya)) ** 2 
print(round(dAB, 3))
-- OUTPUT:
423.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 23:21:11) 
-- CODE:
Xa = float(input("Xa: "))
Ya = float(input("Ya:"))
Xb = float (input("Xb: "))
Yb = float(input("Yb: "))

from math import*
dAB = sqrt((Xb - Xa) ** 2 + (Yb-Ya)) ** 2 
print(round(dAB, 3))
-- OUTPUT:
423.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
